# ci-cd-portfolio-project

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: db.py  main.py
app/crud/: usercrud.py
app/models/: usermodel.py
app/routers/: userauth.py
app/schemas/: userschema.py
app/services/: auth.py
tests/: init_test_db.py  integration_test.py  unit_test.py
